--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TodoList - UX</title>
+    <title>Project 2</title>
     <link rel="icon" href="Adobe_XD_CC_icon.svg.png">
     <script src="https://kit.fontawesome.com/393bd706fe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
