add media queries

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div id="addbutton">
             <a style="text-decoration: none;" href="./index4.html">
-            <i style="color: red;" class="fa fa-plus-circle"></i></a>
-            Add List
+            <i style="color: red;" class="fa fa-plus-circle addcircle"></i></a>
+            <div class="text">Add List</div> 
         </div>
     </div>
     <!-- second container for cards -->
