--- a/index3.html
+++ b/index3.html
@@ -35,5 +35,8 @@
             <input id="additem" type="text"><br><br>
             <label id="addbutton1" for="additem">Add</label>
         </div>
+        <div class="goback2">
+            <a href="index2.html">go back</a>
+        </div>
 </body>
 </html>
