--- a/index4.html
+++ b/index4.html
@@ -53,5 +53,8 @@
             <input id="additem2" type="text"><br><br>
             <label id="addbutton2" for="additem2">Add</label>
         </div>
+        <div class="goback2">
+            <a href="index.html">go back</a>
+        </div>
 </body>
 </html>
