--- a/index2.html
+++ b/index2.html
@@ -12,22 +12,25 @@
 <body>
     
     <div class="container3">
-        <hr class="line">
-        <span>Trip to Paris</span>
+        <div class="line"></div>
+        <div class="paris">Trip to Paris</div>
     </div>
     <div class="backbutton">
         <a href="./index.html">
-        <i style="color: orange; text-decoration: none;" class="fas fa-arrow-circle-left"></i></a><span>Back</span>
+        <i style="color: orange; text-decoration: none;" class="fas fa-arrow-circle-left"></i></a>
+        <div class="back">Back</div>
     </div>
     <div class="cardp">
-        <font size="6">Trip to Paris</font>
+        <font class="ptext">Trip to Paris</font>
         <hr>
-        <strike>Completed Task</strike><br>
+        <strike class="ctask">Completed Task</strike><br>
         <input style="position: relative; left: -20px;" type="checkbox" id="taskp">
         <label style="color: black; position: relative; left: -20px;" for="taskp">Pending Task</label>
+        <div class="addbuttonparis">
         <a style="text-decoration: none; position: relative; top: 45%; left: 30%; color: red; font-size: 40px;" href="index3.html">
-            <i class="fas fa-plus-circle"></i>
+            <i class="fas fa-plus-circle parisbutton"></i>
         </a>
+        </div>
     </div>
 </body>
 </html>
